--- a/config/linux.yaml
+++ b/config/linux.yaml
@@ -6,9 +6,27 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
+  - abseil-cpp=20211102.0=hd4dd3e8_0
+  - aiohttp=3.8.3=py38h5eee18b_0
+  - arrow-cpp=8.0.0=py38h60b952e_0
+  - async-timeout=4.0.2=py38h06a4308_0
+  - attrs=22.1.0=py38h06a4308_0
+  - aws-c-common=0.4.57=he6710b0_1
+  - aws-c-event-stream=0.1.6=h2531618_5
+  - aws-checksums=0.1.9=he6710b0_0
+  - aws-sdk-cpp=1.8.185=hce553d0_0
   - blas=1.0=mkl
+  - boost-cpp=1.73.0=h7f8727e_12
+  - bottleneck=1.3.5=py38h7deecbd_0
+  - brotli=1.0.9=h5eee18b_7
+  - brotli-bin=1.0.9=h5eee18b_7
+  - brotlipy=0.7.0=py38h27cfd23_1003
+  - bzip2=1.0.8=h7b6447c_0
+  - c-ares=1.18.1=h7f8727e_0
   - ca-certificates=2022.10.11=h06a4308_0
   - certifi=2022.9.24=py38h06a4308_0
+  - cffi=1.15.1=py38h5eee18b_3
+  - cryptography=38.0.1=py38h9ce1e76_0
   - cuda=11.7.1=0
   - cuda-cccl=11.7.91=0
   - cuda-command-line-tools=11.7.1=0
@@ -41,15 +59,31 @@ dependencies:
   - cuda-toolkit=11.7.1=0
   - cuda-tools=11.7.1=0
   - cuda-visual-tools=11.7.1=0
+  - cudatoolkit=11.3.1=h2bc3f7f_2
+  - datasets=2.6.1=py38h06a4308_0
   - dbus=1.13.18=hb2f20db_0
+  - dill=0.3.6=py38h06a4308_0
   - expat=2.4.9=h6a678d5_0
-  - faiss-cpu=1.7.3=py3.8_h2a577fa_0_cpu
+  - faiss-gpu=1.7.3=py3.8_h28a55e0_0_cuda11.3
   - flit-core=3.6.0=pyhd3eb1b0_0
   - freetype=2.12.1=h4a9f257_0
+  - frozenlist=1.3.3=py38h5eee18b_0
+  - fsspec=2022.11.0=py38h06a4308_0
   - gds-tools=1.4.0.31=0
+  - gflags=2.2.2=he6710b0_0
   - glib=2.69.1=he621ea3_2
+  - glog=0.5.0=h2531618_0
+  - grpc-cpp=1.46.1=h33aed49_0
+  - huggingface_hub=0.10.1=py38h06a4308_0
+  - icu=58.2=he6710b0_3
+  - idna=3.4=py38h06a4308_0
   - intel-openmp=2021.4.0=h06a4308_3561
+  - krb5=1.19.2=hac12032_0
   - ld_impl_linux-64=2.38=h1181459_1
+  - libboost=1.73.0=h28710b8_12
+  - libbrotlicommon=1.0.9=h5eee18b_7
+  - libbrotlidec=1.0.9=h5eee18b_7
+  - libbrotlienc=1.0.9=h5eee18b_7
   - libcublas=11.11.3.6=0
   - libcublas-dev=11.11.3.6=0
   - libcufft=10.9.0.58=0
@@ -58,59 +92,92 @@ dependencies:
   - libcufile-dev=1.4.0.31=0
   - libcurand=10.3.0.86=0
   - libcurand-dev=10.3.0.86=0
+  - libcurl=7.86.0=h91b91d3_0
   - libcusolver=11.4.1.48=0
   - libcusolver-dev=11.4.1.48=0
   - libcusparse=11.7.5.86=0
   - libcusparse-dev=11.7.5.86=0
-  - libfaiss=1.7.3=h2bc3f7f_0_cpu
+  - libedit=3.1.20210910=h7f8727e_0
+  - libev=4.33=h7f8727e_1
+  - libevent=2.1.12=h8f2d780_0
+  - libfaiss=1.7.3=hfc2d529_0_cuda11.3
   - libffi=3.4.2=h6a678d5_6
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
+  - libnghttp2=1.46.0=hce63b2e_0
   - libnpp=11.8.0.86=0
   - libnpp-dev=11.8.0.86=0
   - libnvjpeg=11.9.0.86=0
   - libnvjpeg-dev=11.9.0.86=0
   - libpng=1.6.37=hbc83047_0
+  - libprotobuf=3.20.1=h4ff587b_0
+  - libssh2=1.10.0=h8f2d780_0
   - libstdcxx-ng=11.2.0=h1234567_1
+  - libthrift=0.15.0=hcc01f38_0
   - libxcb=1.15=h7f8727e_0
+  - lz4-c=1.9.3=h295c915_1
   - mkl=2021.4.0=h06a4308_640
   - mkl-service=2.4.0=py38h7f8727e_0
   - mkl_fft=1.3.1=py38hd3c417c_0
   - mkl_random=1.2.2=py38h51133e4_0
+  - multidict=6.0.2=py38h5eee18b_0
+  - multiprocess=0.70.14=py38h06a4308_0
   - ncurses=6.3=h5eee18b_3
   - nsight-compute=2022.3.0.22=0
+  - numexpr=2.8.4=py38he184ba9_0
   - numpy-base=1.23.4=py38h31eccc5_0
   - openjdk=11.0.13=h87a67e3_0
   - openssl=1.1.1s=h7f8727e_0
+  - orc=1.7.4=h07ed6aa_0
+  - packaging=21.3=pyhd3eb1b0_0
   - pcre=8.45=h295c915_0
   - pip=22.2.2=py38h06a4308_0
+  - pyarrow=8.0.0=py38h992f0b0_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pyopenssl=22.0.0=pyhd3eb1b0_0
+  - pyparsing=3.0.9=py38h06a4308_0
+  - pysocks=1.7.1=py38h06a4308_0
   - python=3.8.15=h7a1cb2a_2
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-xxhash=2.0.2=py38h5eee18b_1
   - pytorch=1.13.0=py3.8_cuda11.7_cudnn8.5.0_0
   - pytorch-cuda=11.7=h67b0de4_0
   - pytorch-mutex=1.0=cuda
+  - pyyaml=6.0=py38h5eee18b_1
+  - re2=2022.04.01=h295c915_0
   - readline=8.2=h5eee18b_0
+  - requests=2.28.1=py38h06a4308_0
+  - responses=0.13.3=pyhd3eb1b0_0
   - setuptools=65.5.0=py38h06a4308_0
   - six=1.16.0=pyhd3eb1b0_1
+  - snappy=1.1.9=h295c915_0
   - sqlite=3.40.0=h5082296_0
   - tk=8.6.12=h1ccaba5_0
+  - tqdm=4.64.1=py38h06a4308_0
+  - typing-extensions=4.4.0=py38h06a4308_0
   - typing_extensions=4.4.0=py38h06a4308_0
+  - urllib3=1.26.13=py38h06a4308_0
+  - utf8proc=2.6.1=h27cfd23_0
   - wheel=0.37.1=pyhd3eb1b0_0
+  - xxhash=0.8.0=h7f8727e_3
   - xz=5.2.8=h5eee18b_0
+  - yaml=0.2.5=h7b6447c_0
+  - yarl=1.8.1=py38h5eee18b_0
   - zlib=1.2.13=h5eee18b_0
+  - zstd=1.5.2=ha4553b6_0
   - pip:
+      - aiosignal==1.3.1
       - anyio==3.6.2
       - argon2-cffi==21.3.0
       - argon2-cffi-bindings==21.2.0
       - asttokens==2.2.0
-      - attrs==22.1.0
       - backcall==0.2.0
       - beautifulsoup4==4.11.1
       - bleach==5.0.1
       - blis==0.7.9
       - catalogue==2.0.8
-      - cffi==1.15.1
       - charset-normalizer==2.1.1
-      - click==8.1.3
+      - click==8.0.4
       - coloredlogs==15.0.1
       - confection==0.0.3
       - cymem==2.0.7
@@ -118,14 +185,19 @@ dependencies:
       - debugpy==1.6.4
       - decorator==5.1.1
       - defusedxml==0.7.1
+      - diskcache==5.4.0
+      - distlib==0.3.6
+      - docker-pycreds==0.4.0
       - entrypoints==0.4
       - executing==1.2.0
       - fastjsonschema==2.16.2
       - filelock==3.8.0
       - flatbuffers==22.11.23
+      - gitdb==4.0.10
+      - gitpython==3.1.29
+      - grpcio==1.51.1
       - huggingface-hub==0.11.1
       - humanfriendly==10.0
-      - idna==3.4
       - importlib-metadata==5.1.0
       - importlib-resources==5.10.0
       - ipykernel==6.17.1
@@ -135,6 +207,7 @@ dependencies:
       - jedi==0.18.2
       - jinja2==3.1.2
       - joblib==1.2.0
+      - jsonargparse==4.18.0
       - jsonschema==4.17.3
       - jupyter==1.0.0
       - jupyter-client==7.4.7
@@ -149,6 +222,7 @@ dependencies:
       - matplotlib-inline==0.1.6
       - mistune==2.0.4
       - mpmath==1.2.1
+      - msgpack==1.0.4
       - murmurhash==1.0.9
       - nbclassic==0.4.8
       - nbclient==0.7.2
@@ -160,10 +234,10 @@ dependencies:
       - notebook-shim==0.2.2
       - numpy==1.21.6
       - onnxruntime==1.13.1
-      - packaging==21.3
       - pandas==1.5.2
       - pandocfilters==1.5.0
       - parso==0.8.3
+      - pathtools==0.1.2
       - pathy==0.10.0
       - pexpect==4.8.0
       - pickleshare==0.7.5
@@ -171,32 +245,33 @@ dependencies:
       - platformdirs==2.5.4
       - preshed==3.0.8
       - prometheus-client==0.15.0
+      - promise==2.3
       - prompt-toolkit==3.0.33
       - protobuf==4.21.10
       - psutil==5.9.4
       - ptyprocess==0.7.0
       - pure-eval==0.2.2
       - pybind11==2.6.1
-      - pycparser==2.21
       - pydantic==1.10.2
       - pygments==2.13.0
       - pyjnius==1.4.2
-      - pyparsing==3.0.9
       - pyrsistent==0.19.2
       - pyserini==0.19.1
-      - python-dateutil==2.8.2
       - pytz==2022.6
-      - pyyaml==6.0
       - pyzmq==24.0.1
       - qtconsole==5.4.0
       - qtpy==2.3.0
+      - ray==2.1.0
       - regex==2022.10.31
-      - requests==2.28.1
       - scikit-learn==1.1.3
       - scipy==1.9.3
       - send2trash==1.8.0
       - sentencepiece==0.1.97
+      - sentry-sdk==1.11.1
+      - setproctitle==1.3.2
+      - shortuuid==1.0.11
       - smart-open==5.2.1
+      - smmap==5.0.0
       - sniffio==1.3.0
       - soupsieve==2.3.2.post1
       - spacy==3.4.3
@@ -211,15 +286,15 @@ dependencies:
       - tinycss2==1.2.1
       - tokenizers==0.13.2
       - tornado==6.2
-      - tqdm==4.64.1
       - traitlets==5.6.0
       - transformers==4.25.1
       - typer==0.7.0
-      - urllib3==1.26.13
+      - virtualenv==20.17.0
+      - wandb==0.13.5
       - wasabi==0.10.1
       - wcwidth==0.2.5
       - webencodings==0.5.1
       - websocket-client==1.4.2
       - widgetsnbextension==4.0.3
       - zipp==3.11.0
-prefix: /home/rosenberg/miniconda3/envs/PPRF
+prefix: /home/wenxueru2022/miniconda3/envs/PPRF
