--- a/config/linux.yaml
+++ b/config/linux.yaml
@@ -188,6 +188,7 @@ dependencies:
       - diskcache==5.4.0
       - distlib==0.3.6
       - docker-pycreds==0.4.0
+      - docstring-parser==0.15
       - entrypoints==0.4
       - executing==1.2.0
       - fastjsonschema==2.16.2
@@ -289,6 +290,7 @@ dependencies:
       - traitlets==5.6.0
       - transformers==4.25.1
       - typer==0.7.0
+      - validators==0.20.0
       - virtualenv==20.17.0
       - wandb==0.13.5
       - wasabi==0.10.1
