--- a/config/linux.yaml
+++ b/config/linux.yaml
@@ -24,8 +24,9 @@ dependencies:
   - bzip2=1.0.8=h7b6447c_0
   - c-ares=1.18.1=h7f8727e_0
   - ca-certificates=2022.10.11=h06a4308_0
-  - certifi=2022.9.24=py38h06a4308_0
+  - certifi=2022.12.7=py38h06a4308_0
   - cffi=1.15.1=py38h5eee18b_3
+  - contourpy=1.0.5=py38hdb19cb5_0
   - cryptography=38.0.1=py38h9ce1e76_0
   - cuda=11.7.1=0
   - cuda-cccl=11.7.91=0
@@ -60,17 +61,20 @@ dependencies:
   - cuda-tools=11.7.1=0
   - cuda-visual-tools=11.7.1=0
   - cudatoolkit=11.3.1=h2bc3f7f_2
+  - cycler=0.11.0=pyhd3eb1b0_0
   - datasets=2.6.1=py38h06a4308_0
   - dbus=1.13.18=hb2f20db_0
   - dill=0.3.6=py38h06a4308_0
   - expat=2.4.9=h6a678d5_0
   - faiss-gpu=1.7.3=py3.8_h28a55e0_0_cuda11.3
   - flit-core=3.6.0=pyhd3eb1b0_0
+  - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.12.1=h4a9f257_0
   - frozenlist=1.3.3=py38h5eee18b_0
   - fsspec=2022.11.0=py38h06a4308_0
   - gds-tools=1.4.0.31=0
   - gflags=2.2.2=he6710b0_0
+  - giflib=5.2.1=h7b6447c_0
   - glib=2.69.1=he621ea3_2
   - glog=0.5.0=h2531618_0
   - grpc-cpp=1.46.1=h33aed49_0
@@ -78,8 +82,12 @@ dependencies:
   - icu=58.2=he6710b0_3
   - idna=3.4=py38h06a4308_0
   - intel-openmp=2021.4.0=h06a4308_3561
+  - jpeg=9e=h7f8727e_0
+  - kiwisolver=1.4.4=py38h6a678d5_0
   - krb5=1.19.2=hac12032_0
+  - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
+  - lerc=3.0=h295c915_0
   - libboost=1.73.0=h28710b8_12
   - libbrotlicommon=1.0.9=h5eee18b_7
   - libbrotlidec=1.0.9=h5eee18b_7
@@ -97,6 +105,7 @@ dependencies:
   - libcusolver-dev=11.4.1.48=0
   - libcusparse=11.7.5.86=0
   - libcusparse-dev=11.7.5.86=0
+  - libdeflate=1.8=h7f8727e_5
   - libedit=3.1.20210910=h7f8727e_0
   - libev=4.33=h7f8727e_1
   - libevent=2.1.12=h8f2d780_0
@@ -114,14 +123,19 @@ dependencies:
   - libssh2=1.10.0=h8f2d780_0
   - libstdcxx-ng=11.2.0=h1234567_1
   - libthrift=0.15.0=hcc01f38_0
+  - libtiff=4.5.0=hecacb30_0
+  - libwebp=1.2.4=h11a3e52_0
+  - libwebp-base=1.2.4=h5eee18b_0
   - libxcb=1.15=h7f8727e_0
   - lz4-c=1.9.3=h295c915_1
+  - matplotlib-base=3.6.2=py38h945d387_0
   - mkl=2021.4.0=h06a4308_640
   - mkl-service=2.4.0=py38h7f8727e_0
   - mkl_fft=1.3.1=py38hd3c417c_0
   - mkl_random=1.2.2=py38h51133e4_0
   - multidict=6.0.2=py38h5eee18b_0
   - multiprocess=0.70.14=py38h06a4308_0
+  - munkres=1.1.4=py_0
   - ncurses=6.3=h5eee18b_3
   - nsight-compute=2022.3.0.22=0
   - numexpr=2.8.4=py38he184ba9_0
@@ -131,6 +145,7 @@ dependencies:
   - orc=1.7.4=h07ed6aa_0
   - packaging=21.3=pyhd3eb1b0_0
   - pcre=8.45=h295c915_0
+  - pillow=9.3.0=py38hace64e9_1
   - pip=22.2.2=py38h06a4308_0
   - pyarrow=8.0.0=py38h992f0b0_0
   - pycparser=2.21=pyhd3eb1b0_0
@@ -148,10 +163,12 @@ dependencies:
   - readline=8.2=h5eee18b_0
   - requests=2.28.1=py38h06a4308_0
   - responses=0.13.3=pyhd3eb1b0_0
+  - seaborn=0.12.2=py38h06a4308_0
   - setuptools=65.5.0=py38h06a4308_0
   - six=1.16.0=pyhd3eb1b0_1
   - snappy=1.1.9=h295c915_0
   - sqlite=3.40.0=h5082296_0
+  - tabulate=0.8.10=py38h06a4308_0
   - tk=8.6.12=h1ccaba5_0
   - tqdm=4.64.1=py38h06a4308_0
   - typing-extensions=4.4.0=py38h06a4308_0
@@ -299,4 +316,4 @@ dependencies:
       - websocket-client==1.4.2
       - widgetsnbextension==4.0.3
       - zipp==3.11.0
-prefix: /home/wenxueru2022/miniconda3/envs/PPRF
+prefix: /home2/wenxueru2022/miniconda3/envs/PPRF
